modifier le titre de html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
-<html>
-	<head>
+<html>	<head>
 		<meta charset="UTF-8" />
-		<title>Je suis le titre à changer !</title>
+		<title>Les Chats</title>
 	</head>
 
 	<body>
